Bug 389189 - wl_seat 5 problems
Summary: wl_seat 5 problems
Status: RESOLVED FIXED
Alias: None
Product: kwayland
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 5.42.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL: https://phabricator.kde.org/D10235
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-19 04:40 UTC by Leonard Lausen
Modified: 2018-03-04 08:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.45
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonard Lausen 2018-01-19 04:40:49 UTC
Some applications fail to start on a plasma wayland session due to missing wl_seat 5 support:

wl_registry@2: error 0: invalid version for global wl_seat (6): have 4, wanted 5 
thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: Error { repr: Os { code: 71, message: "Protocol error" } }', src/libcore/result.rs:906:4

( https://github.com/jwilm/alacritty )
Comment 1 Martin Flöser 2018-02-01 16:51:50 UTC
Addressed in https://phabricator.kde.org/D10235
Comment 2 Martin Flöser 2018-03-04 08:49:01 UTC
Git commit b6bd28ab0492b07f6bb32dcb217f94b4d4a93d2c by Martin Flöser.
Committed on 04/03/2018 at 08:48.
Pushed by graesslin into branch 'master'.

[server] Add support for the frame semantics of Pointer version 5

Summary:
This change implements the required changes for wl_seat version 5.
There seem to be applications which require version 5 and refuse to
start if the server doesn't provide it. Thus we need to provide it.

The main difference with version 5 is that pointer need to send a
frame event after each logical group of events. As we don't support the
new events from version 5 yet, we just emit the frame after each event
and implement the suggested semantics for the enter/leave behavior.

To really make use of this, we will have to implement additions in the
API and then in KWin to expose the new API elements. But to just support
the semantics we don't need it.
FIXED-IN: 5.45

Test Plan: Extended autotest

Reviewers: #kwin, #plasma, #frameworks

Subscribers: plasma-devel

Tags: #frameworks, #plasma

Differential Revision: https://phabricator.kde.org/D10235

M  +16   -1    autotests/client/test_wayland_seat.cpp
M  +42   -1    src/client/pointer.cpp
M  +8    -0    src/client/pointer.h
M  +1    -1    src/client/registry.cpp
M  +14   -0    src/server/pointer_interface.cpp
M  +1    -0    src/server/pointer_interface_p.h
M  +25   -5    src/server/seat_interface.cpp
M  +1    -0    src/server/seat_interface_p.h

https://commits.kde.org/kwayland/b6bd28ab0492b07f6bb32dcb217f94b4d4a93d2c