src/wayland/autotests/client/test_wayland_seat.cpp
@@ -392,6 +392,8 @@ void TestWaylandSeat::testPointer()
     QVERIFY(!m_seatInterface->focusedPointer());
 
     Pointer *p = m_seat->createPointer(m_seat);
+    QSignalSpy frameSpy(p, &Pointer::frame);
+    QVERIFY(frameSpy.isValid());
     const Pointer &cp = *p;
     QVERIFY(p->isValid());
     QScopedPointer<RelativePointer> relativePointer(m_relativePointerManager->createRelativePointer(p));
@@ -404,12 +406,15 @@ void TestWaylandSeat::testPointer()
     QCOMPARE(pointerCreatedSpy.first().first().value<PointerInterface*>(), m_seatInterface->focusedPointer());
     QCOMPARE(focusedPointerChangedSpy.count(), 2);
     QCOMPARE(focusedPointerChangedSpy.last().first().value<PointerInterface*>(), m_seatInterface->focusedPointer());
+    QVERIFY(frameSpy.wait());
+    QCOMPARE(frameSpy.count(), 1);
 
     m_seatInterface->setFocusedPointerSurface(nullptr);
     QCOMPARE(focusedPointerChangedSpy.count(), 3);
     QVERIFY(!focusedPointerChangedSpy.last().first().value<PointerInterface*>());
     serverSurface->client()->flush();
-    QTest::qWait(100);
+    QVERIFY(frameSpy.wait());
+    QCOMPARE(frameSpy.count(), 2);
 
     QSignalSpy enteredSpy(p, SIGNAL(entered(quint32,QPointF)));
     QVERIFY(enteredSpy.isValid());
@@ -436,6 +441,7 @@ void TestWaylandSeat::testPointer()
     QVERIFY(enteredSpy.wait());
     QCOMPARE(enteredSpy.first().first().value<quint32>(), m_display->serial());
     QCOMPARE(enteredSpy.first().last().toPoint(), QPoint(10, 3));
+    QCOMPARE(frameSpy.count(), 3);
     PointerInterface *serverPointer = m_seatInterface->focusedPointer();
     QVERIFY(serverPointer);
     QCOMPARE(p->enteredSurface(), s);
@@ -447,6 +453,7 @@ void TestWaylandSeat::testPointer()
     m_seatInterface->setTimestamp(1);
     m_seatInterface->setPointerPos(QPoint(10, 16));
     QVERIFY(motionSpy.wait());
+    QCOMPARE(frameSpy.count(), 4);
     QCOMPARE(motionSpy.first().first().toPoint(), QPoint(0, 1));
     QCOMPARE(motionSpy.first().last().value<quint32>(), quint32(1));
 
@@ -462,9 +469,11 @@ void TestWaylandSeat::testPointer()
     m_seatInterface->setTimestamp(2);
     m_seatInterface->pointerAxis(Qt::Horizontal, 10);
     QVERIFY(axisSpy.wait());
+    QCOMPARE(frameSpy.count(), 5);
     m_seatInterface->setTimestamp(3);
     m_seatInterface->pointerAxis(Qt::Vertical, 20);
     QVERIFY(axisSpy.wait());
+    QCOMPARE(frameSpy.count(), 6);
     QCOMPARE(axisSpy.first().at(0).value<quint32>(), quint32(2));
     QCOMPARE(axisSpy.first().at(1).value<Pointer::Axis>(), Pointer::Axis::Horizontal);
     QCOMPARE(axisSpy.first().at(2).value<qreal>(), qreal(10));
@@ -477,18 +486,22 @@ void TestWaylandSeat::testPointer()
     m_seatInterface->setTimestamp(4);
     m_seatInterface->pointerButtonPressed(1);
     QVERIFY(buttonSpy.wait());
+    QCOMPARE(frameSpy.count(), 7);
     QCOMPARE(buttonSpy.at(0).at(0).value<quint32>(), m_display->serial());
     m_seatInterface->setTimestamp(5);
     m_seatInterface->pointerButtonPressed(2);
     QVERIFY(buttonSpy.wait());
+    QCOMPARE(frameSpy.count(), 8);
     QCOMPARE(buttonSpy.at(1).at(0).value<quint32>(), m_display->serial());
     m_seatInterface->setTimestamp(6);
     m_seatInterface->pointerButtonReleased(2);
     QVERIFY(buttonSpy.wait());
+    QCOMPARE(frameSpy.count(), 9);
     QCOMPARE(buttonSpy.at(2).at(0).value<quint32>(), m_display->serial());
     m_seatInterface->setTimestamp(7);
     m_seatInterface->pointerButtonReleased(1);
     QVERIFY(buttonSpy.wait());
+    QCOMPARE(frameSpy.count(), 10);
     QCOMPARE(buttonSpy.count(), 4);
 
     // timestamp
@@ -521,6 +534,7 @@ void TestWaylandSeat::testPointer()
     m_seatInterface->setFocusedPointerSurface(nullptr);
     QCOMPARE(focusedPointerChangedSpy.count(), 5);
     QVERIFY(leftSpy.wait());
+    QCOMPARE(frameSpy.count(), 11);
     QCOMPARE(leftSpy.first().first().value<quint32>(), m_display->serial());
     QVERIFY(!p->enteredSurface());
     QVERIFY(!cp.enteredSurface());
@@ -533,6 +547,7 @@ void TestWaylandSeat::testPointer()
     m_seatInterface->setFocusedPointerSurface(serverSurface, QPoint(0, 0));
     QCOMPARE(focusedPointerChangedSpy.count(), 6);
     QVERIFY(enteredSpy.wait());
+    QCOMPARE(frameSpy.count(), 12);
     QCOMPARE(p->enteredSurface(), s);
     QCOMPARE(cp.enteredSurface(), s);
 
